Organized code in colab using sections

--- a/crime_rate_prediction.ipynb
+++ b/crime_rate_prediction.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNblbZY48PC5zVR/aHF9HwI",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMDoqwo8EkB6z0IS6Rtum63",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,12 +28,16 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# 0.0 Spark Environment Setup"
+      ],
       "metadata": {
-        "id": "SwOF5LbDLtto"
-      },
-      "outputs": [],
+        "id": "p9CdGIXCdWZQ"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#pyspark setup\n",
         "\n",
@@ -45,9 +50,23 @@
         "\n",
         "# setup environment variables\n",
         "import os\n",
-        "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-11-openjdk-amd64\"\n",
-        "os.environ[\"SPARK_HOME\"] = \"/usr/local/lib/python3.10/dist-packages/pyspark\""
-      ]
+        "# os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-11-openjdk-amd64\"\n",
+        "# os.environ[\"SPARK_HOME\"] = \"/usr/local/lib/python3.10/dist-packages/pyspark\""
+      ],
+      "metadata": {
+        "id": "3DFPxoYHdeO8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 0.1 Crime Data Generation"
+      ],
+      "metadata": {
+        "id": "2gI9aYVtdmRG"
+      }
     },
     {
       "cell_type": "code",
@@ -59,9 +78,9 @@
         "spark = SparkSession.builder.master(\"local[*]\").appName(\"Crime-rate-prediction\").getOrCreate()"
       ],
       "metadata": {
-        "id": "MC69x9JONS0y"
+        "id": "COLjlaHedtuv"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -141,18 +160,46 @@
         "    return data\n",
         "\n",
         "# Generate and display the synthetic data\n",
-        "synthetic_data = generate_city_crime_data()\n",
-        "synthetic_data.head(5)\n"
+        "crime_data = generate_city_crime_data()"
+      ],
+      "metadata": {
+        "id": "bDiOC3cjeB7I"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Task 1: Data Preprocessing & Feature Engineering"
+      ],
+      "metadata": {
+        "id": "VxJXpRa8eN_J"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Preview top 10 rows of data"
+      ],
+      "metadata": {
+        "id": "7XGPYorEfD12"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "crime_data.head(5)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 226
         },
-        "id": "_t81_5v8Ncsd",
-        "outputId": "3b4546d3-e05b-4180-bb71-aa47d9b52e5b"
+        "id": "dRDrFfi3eySJ",
+        "outputId": "57e8271b-7875-4fc4-970c-f59fb9dbc867"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,7 +228,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e22cd8b3-693d-4339-802c-12ab0154c207\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-52b8e0fa-e376-40cd-b26b-5c59ac868daf\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -290,7 +337,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e22cd8b3-693d-4339-802c-12ab0154c207')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-52b8e0fa-e376-40cd-b26b-5c59ac868daf')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -342,12 +389,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e22cd8b3-693d-4339-802c-12ab0154c207 button.colab-df-convert');\n",
+              "        document.querySelector('#df-52b8e0fa-e376-40cd-b26b-5c59ac868daf button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e22cd8b3-693d-4339-802c-12ab0154c207');\n",
+              "        const element = document.querySelector('#df-52b8e0fa-e376-40cd-b26b-5c59ac868daf');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -367,8 +414,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b578d2f6-7731-47a3-b3e6-cf21a3cb4628\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b578d2f6-7731-47a3-b3e6-cf21a3cb4628')\"\n",
+              "<div id=\"df-50da5bd6-80e8-4b56-9e19-c74c31bb47f4\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-50da5bd6-80e8-4b56-9e19-c74c31bb47f4')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -487,7 +534,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b578d2f6-7731-47a3-b3e6-cf21a3cb4628 button');\n",
+              "        document.querySelector('#df-50da5bd6-80e8-4b56-9e19-c74c31bb47f4 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -499,20 +546,64 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "variable_name": "synthetic_data",
-              "summary": "{\n  \"name\": \"synthetic_data\",\n  \"rows\": 100,\n  \"fields\": [\n    {\n      \"column\": \"city_name\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 100,\n        \"samples\": [\n          \"City84\",\n          \"City54\",\n          \"City71\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"population_density\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 5700,\n        \"min\": 661,\n        \"max\": 19988,\n        \"num_unique_values\": 100,\n        \"samples\": [\n          5758,\n          12153,\n          12685\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"poverty_rate\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 5.171749642628908,\n        \"min\": 8.998747707042988,\n        \"max\": 30.0,\n        \"num_unique_values\": 85,\n        \"samples\": [\n          16.001166414522476,\n          27.321477096152144,\n          18.784545343693615\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"police_budget\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 563862,\n        \"min\": 691841,\n        \"max\": 2920785,\n        \"num_unique_values\": 100,\n        \"samples\": [\n          1986738,\n          1173376,\n          2456063\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"unemployment_rate\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2.7818189729380847,\n        \"min\": 3.8007446289802145,\n        \"max\": 15.0,\n        \"num_unique_values\": 90,\n        \"samples\": [\n          12.417441974098548,\n          11.785219626678517,\n          8.899922060984226\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"housing_quality_index\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1.4377915603099833,\n        \"min\": 3.1346568259517635,\n        \"max\": 9.45678844596403,\n        \"num_unique_values\": 90,\n        \"samples\": [\n          7.792084198134762,\n          8.152235244766183,\n          4.128639457258943\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"traffic_violation_rate\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 65.83314552920828,\n        \"min\": 78.6535249204071,\n        \"max\": 341.55710488555826,\n        \"num_unique_values\": 90,\n        \"samples\": [\n          133.40144119689157,\n          318.36885453882036,\n          141.94262561350055\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"drug_abuse_rate\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 5.640213531032703,\n        \"min\": 11.206452422190424,\n        \"max\": 40.0,\n        \"num_unique_values\": 100,\n        \"samples\": [\n          13.633724486343223,\n          34.19306584182172,\n          32.81954428576127\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"mental_health_services\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.6810046519508427,\n        \"min\": 6.732863710435799,\n        \"max\": 10.0,\n        \"num_unique_values\": 20,\n        \"samples\": [\n          10.0,\n          9.351671677963388,\n          7.732598561102877\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"gun_ownership_rate\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 8.906381316561642,\n        \"min\": 20.0,\n        \"max\": 59.84863309810204,\n        \"num_unique_values\": 67,\n        \"samples\": [\n          44.218850210239566,\n          21.55393846377433,\n          24.117530304084035\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"crime_rate\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 12.945438928829208,\n        \"min\": 11.565548458638329,\n        \"max\": 73.96548483056054,\n        \"num_unique_values\": 100,\n        \"samples\": [\n          48.80152294022622,\n          30.336460846629457,\n          51.97436568493426\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "variable_name": "crime_data",
+              "summary": "{\n  \"name\": \"crime_data\",\n  \"rows\": 100,\n  \"fields\": [\n    {\n      \"column\": \"city_name\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 100,\n        \"samples\": [\n          \"City84\",\n          \"City54\",\n          \"City71\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"population_density\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 5700,\n        \"min\": 661,\n        \"max\": 19988,\n        \"num_unique_values\": 100,\n        \"samples\": [\n          5758,\n          12153,\n          12685\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"poverty_rate\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 5.171749642628908,\n        \"min\": 8.998747707042988,\n        \"max\": 30.0,\n        \"num_unique_values\": 85,\n        \"samples\": [\n          16.001166414522476,\n          27.321477096152144,\n          18.784545343693615\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"police_budget\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 563862,\n        \"min\": 691841,\n        \"max\": 2920785,\n        \"num_unique_values\": 100,\n        \"samples\": [\n          1986738,\n          1173376,\n          2456063\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"unemployment_rate\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2.7818189729380847,\n        \"min\": 3.8007446289802145,\n        \"max\": 15.0,\n        \"num_unique_values\": 90,\n        \"samples\": [\n          12.417441974098548,\n          11.785219626678517,\n          8.899922060984226\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"housing_quality_index\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1.4377915603099833,\n        \"min\": 3.1346568259517635,\n        \"max\": 9.45678844596403,\n        \"num_unique_values\": 90,\n        \"samples\": [\n          7.792084198134762,\n          8.152235244766183,\n          4.128639457258943\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"traffic_violation_rate\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 65.83314552920828,\n        \"min\": 78.6535249204071,\n        \"max\": 341.55710488555826,\n        \"num_unique_values\": 90,\n        \"samples\": [\n          133.40144119689157,\n          318.36885453882036,\n          141.94262561350055\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"drug_abuse_rate\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 5.640213531032703,\n        \"min\": 11.206452422190424,\n        \"max\": 40.0,\n        \"num_unique_values\": 100,\n        \"samples\": [\n          13.633724486343223,\n          34.19306584182172,\n          32.81954428576127\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"mental_health_services\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.6810046519508427,\n        \"min\": 6.732863710435799,\n        \"max\": 10.0,\n        \"num_unique_values\": 20,\n        \"samples\": [\n          10.0,\n          9.351671677963388,\n          7.732598561102877\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"gun_ownership_rate\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 8.906381316561642,\n        \"min\": 20.0,\n        \"max\": 59.84863309810204,\n        \"num_unique_values\": 67,\n        \"samples\": [\n          44.218850210239566,\n          21.55393846377433,\n          24.117530304084035\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"crime_rate\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 12.945438928829208,\n        \"min\": 11.565548458638329,\n        \"max\": 73.96548483056054,\n        \"num_unique_values\": 100,\n        \"samples\": [\n          48.80152294022622,\n          30.336460846629457,\n          51.97436568493426\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 9
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Find out missing or null values in columns"
+      ],
+      "metadata": {
+        "id": "QyErAqqwgULg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "missing_columns = crime_data.columns[crime_data.isnull().any()].tolist()\n",
+        "\n",
+        "print(missing_columns)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wbn4hzD6gL4j",
+        "outputId": "8a83ac6e-4da2-4bb7-af40-0d71fcad2813"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['poverty_rate', 'housing_quality_index', 'traffic_violation_rate']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Handle Missing Data**"
+      ],
+      "metadata": {
+        "id": "CFbRSm65frqn"
+      }
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "JLjt14vCYSkm"
+        "id": "67WAtlfTf9O8"
       },
       "execution_count": null,
       "outputs": []
